# fortidlp

./: .gitignore  LICENSE  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
fortidlp/: __init__.py  api_parameters.json  auth.py  connector.py  fortidlp.py
